--- a/MyPad/Views/Regions/GrepView.xaml
+++ b/MyPad/Views/Regions/GrepView.xaml
@@ -17,7 +17,7 @@
              d:DesignHeight="450" d:DesignWidth="800">
     
     <Grid ge:GridEx.RowDefinition="Auto, 10, *, 3, Auto">
-        <Grid Grid.Row="0" ge:GridEx.RowDefinition="Auto, 3, Auto, 5, Auto, 10, Auto, 5, Auto, 3, Auto" ge:GridEx.ColumnDefinition="*, Auto, 5, Auto, Auto">
+        <Grid Grid.Row="0" ge:GridEx.RowDefinition="Auto, 3, Auto, 5, Auto, 10, Auto, 5, Auto, 3, Auto" ge:GridEx.ColumnDefinition="*, Auto, 5, Auto, Auto" IsEnabled="{qc:Binding '!$P', P={Binding IsPending.Value, Mode=OneWay}}">
             <Grid.Resources>
                 <Style x:Key="AccentButton" TargetType="{x:Type Button}" BasedOn="{StaticResource Common.AccentButton}">
                     <Setter Property="Padding"     Value="2"/>
@@ -100,7 +100,10 @@
         <TextBlock Grid.Row="4" HorizontalAlignment="Right" Text="{Binding Results.Count, StringFormat=Matched lines: {0}, Mode=OneWay}"/>
 
         <Border d:IsHidden="True" Style="{StaticResource Common.Overlay}" Visibility="{qc:Binding '$P ? Visibility.Visible : Visibility.Collapsed', P={Binding IsPending.Value, Mode=OneWay}}">
-            <m:ProgressRing/>
+            <StackPanel Margin="5 0" HorizontalAlignment="Stretch" VerticalAlignment="Center">
+                <Button Content="{le:Loc Command_Cancel}" Command="{Binding GrepCancelCommand, Mode=OneTime}"/>
+                <m:MetroProgressBar IsIndeterminate="True"/>
+            </StackPanel>
         </Border>
     </Grid>
 
